<resources>
    <string name="app_name">UrbanPiperHackerNews</string>
    <string name="enter_mobile">Enter Phone Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="submit_btn">Submit</string>
    <string name="title">Title </string>
    <string name="submitter">Submitter</string>
    <string name="datetime">Date Time</string>
    <string name="comments">Comments</string>
    <string name="votes">Votes</string>
    <string name="score">Score</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Send OTP</string>
    <string name="verify_phone_auth">Verify OTP</string>
    <string name="resend_phone_auth">Resend OTP</string>
</resources>
